--- a/DU1/pom.xml
+++ b/DU1/pom.xml
@@ -10,8 +10,16 @@
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <exec.mainClass>com.nhom1.du1.DU1</exec.mainClass> 
-        
+        <!--duong dan cua quyet-->
         <myjar1.path>D:\pujic\DU1\lib</myjar1.path>
+        <!--duong dan cua huong-->
+        <!--<myjar1.path>D:\DuAn1\MainKaKe\DU1\lib</myjar1.path>-->
+        <!--duong dan cua tung-->
+        <!--<myjar1.path>D:\da1\TT_doing\DU1\lib</myjar1.path>-->
+        <!--======= duong dan cua hieu-->
+        <!--<myjar1.path>D:\CNTT\Spr2023\Block2\Du_An_1\Project_Tong\DU1\lib</myjar1.path>-->
+        
+        <!--<myjar1.path>D:\pujic\DU1\lib</myjar1.path>-->
 
 
     </properties>
@@ -25,6 +33,11 @@
             <version>4.1.2</version>
         </dependency>-->
         
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
         <dependency>
@@ -84,13 +97,13 @@
             <version>RELEASE126</version>
         </dependency>
 
-        <dependency>
+        <!--        <dependency>
             <groupId>bridj</groupId>
             <artifactId>bridj</artifactId>
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${myjar1.path}\bridj-0.6.2-windows-only.jar</systemPath> 
-        </dependency>
+        </dependency>-->
         
         <dependency>
             <groupId>com.google.zxing</groupId>
@@ -113,21 +126,21 @@
             <systemPath>${myjar1.path}\log4j-1.2.17.jar</systemPath> 
         </dependency>-->
         
-        <dependency>
+        <!--        <dependency>
             <groupId>slf</groupId>
             <artifactId>slf</artifactId>
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${myjar1.path}\slf4j-api-1.6.2.jar</systemPath> 
-        </dependency>
+        </dependency>-->
         
-        <dependency>
+        <!--        <dependency>
             <groupId>slf4</groupId>
             <artifactId>slf4</artifactId>
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${myjar1.path}\slf4j-log4j12-1.6.2.jar</systemPath> 
-        </dependency>
+        </dependency>-->
         
         <!-- https://mvnrepository.com/artifact/com.github.sarxos/webcam-capture -->
         <dependency>
@@ -135,8 +148,35 @@
             <artifactId>webcam-capture</artifactId>
             <version>0.3.12</version>
         </dependency>
-
-
     </dependencies>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>view.application</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
